--- a/packages/ai-bridge/package.json
+++ b/packages/ai-bridge/package.json
@@ -1,21 +1,16 @@
 {
-  "name": "ai-bridge",
-  "version": "1.1.0",
+  "name": "@tgpt/open-api",
+  "version": "1.0.0",
   "description": "AI connector library, which helps simplify API usage, and provide out of the box caching.",
   "main": "src/AiBridge",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
-  },
-  "repository": {
-    "type": "git",
-    "url": "https://github.com/uilicious/ai-bridge"
   },
   "keywords": [
     "AI",
     "cache",
     "OpenAI"
   ],
-  "homepage": "https://github.com/uilicious/ai-bridge",
   "author": "Eugene Cheah (@picocreator)",
   "license": "Apache-2.0",
   "dependencies": {
