--- a/packages/open-api/package.json
+++ b/packages/open-api/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@tgpt/open-api",
-  "version": "1.0.0",
+  "version": "1.1.0",
   "description": "AI connector library, which helps simplify API usage, and provide out of the box caching.",
   "main": "src/AiBridge",
   "scripts": {
@@ -32,5 +32,8 @@
   },
   "engines": {
     "node": ">=18.0.0"
+  },
+  "publishConfig": {
+    "access": "public"
   }
 }
