--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "tgpt",
-  "version": "1.0.0",
+  "version": "1.1.0",
   "description": "tmac-gpt",
   "main": "index.js",
   "private": true,
@@ -15,7 +15,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+ssh://git@github.com/T-Macgrady/gpt-dev.git"
+    "url": "git+ssh://git@github.com/T-Macgrady/tgpt-dev.git"
   },
   "keywords": [
     "gpt",
@@ -24,7 +24,7 @@
   "author": "tmac.lzh",
   "license": "ISC",
   "bugs": {
-    "url": "https://github.com/T-Macgrady/gpt-dev/issues"
+    "url": "https://github.com/T-Macgrady/tgpt-dev/issues"
   },
-  "homepage": "https://github.com/T-Macgrady/gpt-dev#readme"
+  "homepage": "https://github.com/T-Macgrady/tgpt-dev#readme"
 }
